# primitives

lastmile/: Cargo.toml  workflow.sh
lastmile/aes/: aes.py  baseline.v  reticle_blk.v  reticle_dis.v  rom.py
lastmile/aes_data/base/: timing.rpt  timingsum.rpt  util.rpt  vivado.jou  vivado.tcl
lastmile/aes_data/blk/: constraint.xdc  timing.rpt  timingsum.rpt  util.rpt  vivado.jou  vivado.tcl
lastmile/aes_data/dis/: timing.rpt  timingsum.rpt  util.rpt  vivado.jou  vivado.tcl
lastmile/data/: roma_bram_d16_s4096.json  roma_bram_d32_s64.json  roma_d16_s2048.json  roma_d16_s256.json  roma_d16_s8.json  roma_d32_s4096.json  roma_d8_s32.json  romb_bram_d16_s128.json  romb_d16_s16.json  romb_d16_s32.json  romb_d32_s4096.json  romb_d32_s8.json  romb_d8_s16.json  timing.rpt  timingsum.rpt  util.rpt
lastmile/data_backup/: roma_bram_d16_s2048.json  roma_d16_s16.json  romb_bram_d32_s2048.json  romb_bram_d8_s4096.json  romb_d32_s16.json  romb_d8_s8.json
lastmile/data_wo_constraint/: roma_bram_d16_s1024.json  roma_bram_d32_s1024.json  roma_bram_d32_s4096.json  roma_d16_s4096.json  roma_d32_s2048.json  roma_d8_s16.json  roma_d8_s2048.json  roma_d8_s4096.json  romb_bram_d32_s128.json  romb_d16_s16.json  romb_d16_s4096.json
lastmile/examples/: romab.rs
lastmile/plot/: main.py  pyproject.toml
lastmile/src/: lib.rs  main.rs  parse.rs  profile.rs  rom.rs  vivado.rs
lastmile/templates/: constraint.txt  rom.txt  rom_pyrtl.txt  roma.txt  romb.txt  vivado.txt
tests/: clean.sh  rom_behav_a.v  rom_behav_b.v  rom_prim_c.v  rom_prim_d.v  sim.sh  synth.sh  synth.tcl  test.v
(+50 files in other folders)
