[package]
name = "lastmile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
anyhow = "1.0.53"
rand = "0.8.4"
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"] }
regex = "1.5.4"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.0"
structopt = "0.3.0"