[tool.poetry]
name = "plot"
version = "0.1.0"
description = ""
authors = ["Luis Vega <vegaluisjose@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.2"
pandas = "^1.4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
